2008-01-04  Emmanuele Bassi  <ebassi@gnome.org>

	* moduleset/gnome-2.22.modules: Fix the repository location for
	pyclutter.

2008-01-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py: updated write_dot() method to work with newer
	module types and to display branch name in label when appropriate.

2008-01-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/svn.py: protect tree_id() against svn info
	errors.

2008-01-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/__init__.py, jhbuild/commands/base.py,
	jhbuild/commands/info.py: Display usage when buildone, updatone or info
	commands are called without a module parameter.

2008-01-01  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.22.modules: Added gstreammermm. Removed giomm 
	because that code is now in glibmm.

2007-12-31  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-suites-2.22.modules: Gucharmap doesn't depend on
	libgnomeui anymore.

2007-12-31  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/mtn.py, modulesets/moduleset.dtd: added
	support for Monotone, patch by Gary Kramlich, slightly edited by
	myself.  (closes: #481742)

	* modulesets/gnome-2.22.modules: added pidgin, as it uses Monotone.

2007-12-28  Frederic Peters  <fpeters@0d.be>

	* modulesets/freedesktop-2.22.modules: libtelepathy depends on
	telepathy-glib.

2007-12-28  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/waf.py: added hint to jhbuild -m boostrap buildone
	waf when waf is not found.

2007-12-27  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.22.modules: downgraded HAL to 0.5.9
	as gvfs is ok with that version (even though it recommends 0.5.10),
	done as HAL 0.5.10 needs libvolume_id 0.77, which needs udev 111.

2007-12-26  Marko Anastasov  <marko.anastasov@gmail.com>

	* modulesets/gnome-suites-2.22.modules: Fetch glibmm head instead
	of the 2-14 branch.

2007-12-26  Frederic Peters  <fpeters@0d.be>
