@@ -1,3 +1,9 @@
+2008-01-06  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/tarball.py: made Tarball module type a thin wrapper
+	around Autotools module type and Tarball repository type; thus removing
+	a lot of duplicated code.
+
 2008-01-04  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* moduleset/gnome-2.22.modules: Fix the repository location for
